# grecovery

./: Readme.md  meson.build
data/: desktop  grecovery-pkexec
data/icons/: gresource.xml
gtk/src/: formats-win.c  formats-win.h  grecovery-app.c  grecovery-app.h  grecovery-win.c  grecovery-win.h  main.c  recovery.c  recovery.h
include/: config.h  filegen.h  log.h  photorec.h  sessionp.h
subprojects/lib/: meson.build
subprojects/lib/src/: addpart.h  chgarch.c  chgtype.c  common.c  dir.c  fat.c  fat_dir.c  file_sig.c  file_x4a.c  file_xm.c  filegen.c  fnctdsk.c  fnctdsk.h  guid_cpy.h  hdaccess.c  intrf.c  list.h  log.c  luks.h  luks_struct.h  md.c  misc.c  ntfs.c  partauto.c  parti386.c  partmac.c  partmac.h  partsun.c  photorec.c  photorec_check_header.h  sessionp.c  sessionp.h
